# mgit

./: .gitignore  CMakeLists.txt  README.md  mgit.sh  shell.nix  vcpkg.json  xmake.lua
.mgit/: activity.db
docs/: API_REFERENCE.md  ARCHITECTURE.md
git_test_repo/subdir/: file3.txt
src/: BranchManager.cpp  CLISetupAndHandlers.cpp  GitActivityLogger.cpp  GitBranch.cpp  GitConfig.cpp  GitHead.cpp  GitIndex.cpp  GitInit.cpp  GitMerge.cpp  GitObjectStorage.cpp  GitObjectTypesClasses.cpp  GitRepository.cpp  GitRepositry.cpp  main.cpp  server.cpp  zlib-util.cpp
src/headers/: BranchManager.hpp  CLISetupAndHandlers.hpp  GitActivityLogger.hpp  GitBranch.hpp  GitCommit.hpp  GitConfig.hpp  GitHead.hpp  GitIndex.hpp  GitInit.h  GitInit.hpp  GitMerge.hpp  GitObjectStorage.hpp  GitObjectTypesClasses.hpp  GitRepository.h  GitRepository.hpp  HashUtils.hpp  ZlibUtils.hpp
src/utils/: HashUtils.h  ZlibUtils.h  zlib-util.cpp
tests/: integration_cli_test.cpp  smoke_cli.sh
